# utilscpp

./: CMakeLists.txt  readme.md  test  test.sh
include/: debug.hh  macro.hh  memory.hh  result.hh
include/cpp/: memory.hh  result.hh
include/logger/: logger.hh
include/macros/: implements.hh
src/logger/: logger.cc
tests/: test.cc
